<resources>
    <string name="app_name">BahalaNAPP</string>
    <string name="splashscreen_appname">Bahala napp</string>
    <string name="tapmona_textview">Tap mo na!</string>
    <string name="bahalana_button">Bahala na</string>
    <string name="top10_textview">Top 10 Restaurants</string>
    <string name="viewallresto_textview"><u>View all restaurants</u></string>
    <string name="back"> &#60; Back </string>
    <string name="allresto">All Restaurants</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="repassword">Re-type Password</string>
    <string name="create">Create</string>
    <string name="alreadyhave">Already have an account?</string>
    <string name="loginhere">Login here</string>
    <string name="resto_name">Dimsum Treats</string>
    <string name="resto_details">Profile Description</string>
    <string name="map_location">Map Location</string>
    <string name="opening_hours">Opening Hours:</string>
    <string name="best_seller">Best Sellers:</string>
    <string name="price_range">Price Range:</string>
    <string name="contact_us">Contact Us:</string>
    <string name="visit_us">Visit Us:</string>
    <string name="detailed_location">Detail Location:</string>
    <string name="rate_us"><u>RATE THIS RESTAURANT</u></string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
</resources>
