<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context="com.reginalddc.bahalanapp.Activity.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".35"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/applogo"
            android:id="@+id/logo_imageView"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.65">

        <EditText
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:id="@+id/username_editText"
            android:layout_gravity="center_horizontal"
            android:hint="@string/username"
            android:textColor="@color/blackColor"
            android:textSize="20sp"
            android:textColorHint="@color/grayColor"
            android:layout_marginTop="40dp"
            android:drawablePadding="15dp"
            android:drawableLeft="@drawable/profile_inactive"
            android:paddingStart="10dp"
            android:paddingBottom="5dp"
            android:background="@drawable/edittext_underline"/>

        <EditText
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_underline"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/editText_password"
            android:textColorHint="@color/grayColor"
            android:hint="@string/password"
            android:layout_marginTop="20dp"
            android:textColor="@color/blackColor"
            android:textSize="20sp"
            android:drawablePadding="15dp"
            android:drawableLeft="@drawable/password"
            android:paddingStart="10dp"
            android:paddingBottom="5dp"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="230dp"
            android:layout_height="35dp"
            android:background="@drawable/loginbuttonborder"
            android:text="@string/login"
            android:textColor="@color/whiteColor"
            android:textSize="20sp"
            android:id="@+id/login_button"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"
            android:onClick="loginAccount" />

        <Button
            android:layout_width="230dp"
            android:layout_height="35dp"
            android:background="@drawable/signupbuttonborder"
            android:text="@string/signup"
            android:textColor="@color/redColor"
            android:textSize="20sp"
            android:id="@+id/signup_button"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"
            android:onClick="signupAccount" />
    </LinearLayout>
</LinearLayout>
