<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.reginalddc.bahalanapp.Fragment.Fragment.RestaurantDetailFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TableRow
                    android:id="@+id/tableRow1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="1"
                    android:layout_marginTop="10dp">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight=".35"
                        android:layout_height="wrap_content"
                        android:text="@string/opening_hours"
                        android:textStyle="bold"
                        android:gravity="left"
                        android:textSize="17sp"
                        android:textColor="@color/blackColor"
                        android:layout_marginLeft="10dp"
                        android:id="@+id/title_opening"/>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight=".65"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:textColor="@color/blackColor"
                        android:textSize="16sp"
                        android:layout_marginLeft="5dp"
                        android:id="@+id/detail_opening"/>
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="1"
                    android:layout_marginTop="10dp">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight=".35"
                        android:layout_height="wrap_content"
                        android:text="@string/best_seller"
                        android:textStyle="bold"
                        android:gravity="left"
                        android:textSize="17sp"
                        android:textColor="@color/blackColor"
                        android:layout_marginLeft="10dp"
                        android:id="@+id/title_best"/>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight=".65"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:textColor="@color/blackColor"
                        android:textSize="16sp"
                        android:layout_marginLeft="5dp"
                        android:id="@+id/detail_best"/>
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="1"
                    android:layout_marginTop="10dp">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight=".35"
                        android:layout_height="wrap_content"
                        android:text="@string/price_range"
                        android:textStyle="bold"
                        android:gravity="left"
                        android:textSize="17sp"
                        android:textColor="@color/blackColor"
                        android:layout_marginLeft="10dp"
                        android:id="@+id/title_price"/>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight=".65"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:textColor="@color/blackColor"
                        android:textSize="16sp"
                        android:layout_marginLeft="5dp"
                        android:id="@+id/detail_price"/>
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="1"
                    android:layout_marginTop="10dp">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight=".35"
                        android:layout_height="wrap_content"
                        android:text="@string/contact_us"
                        android:textStyle="bold"
                        android:gravity="left"
                        android:textSize="17sp"
                        android:textColor="@color/blackColor"
                        android:layout_marginLeft="10dp"
                        android:id="@+id/title_contact"/>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight=".65"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:textColor="@color/blackColor"
                        android:textSize="16sp"
                        android:layout_marginLeft="5dp"
                        android:id="@+id/detail_contact"/>
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="1"
                    android:layout_marginTop="10dp">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight=".35"
                        android:layout_height="wrap_content"
                        android:text="@string/visit_us"
                        android:textStyle="bold"
                        android:gravity="left"
                        android:textSize="17sp"
                        android:textColor="@color/blackColor"
                        android:layout_marginLeft="10dp"
                        android:id="@+id/title_visit"/>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight=".65"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:textColor="@color/blackColor"
                        android:textSize="16sp"
                        android:layout_marginLeft="5dp"
                        android:id="@+id/detail_visit"/>
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="1"
                    android:layout_marginTop="10dp">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight=".35"
                        android:layout_height="wrap_content"
                        android:text="@string/detailed_location"
                        android:textStyle="bold"
                        android:gravity="left"
                        android:textSize="17sp"
                        android:textColor="@color/blackColor"
                        android:layout_marginLeft="10dp"
                        android:id="@+id/title_location"/>
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="1"
                    android:layout_marginTop="5dp">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight=".1"
                        android:layout_height="match_parent"/>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight=".8"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:textColor="@color/blackColor"
                        android:id="@+id/detail_location"/>
                </TableRow>

                <!--<TableRow-->
                    <!--android:id="@+id/tableRow8"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:weightSum="1"-->
                    <!--android:layout_marginTop="10dp">-->

                    <!---->

                    <!--<TextView-->
                        <!--android:layout_width="0dp"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:layout_weight="0"-->
                        <!--/>-->
                    <!--<RatingBar-->
                        <!--android:id="@+id/ratingBar"-->
                        <!--android:layout_gravity="right"-->
                        <!--android:layout_width="wrap_content"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:numStars="5"-->
                        <!--android:stepSize="1.0"-->
                        <!--android:rating="3.0"-->
                        <!--android:layout_marginLeft="10dp" />-->
                <!--</TableRow>-->
            </TableLayout>
        </ScrollView>
    </LinearLayout>
</FrameLayout>
